--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
     "@types/leaflet.markercluster": "^1.5.4",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.4",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
