--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "main": "index.js",
   "private": true,
+  "repository": {
+    "url": "git+https://github.com/KoalaG/nbn-sq-map.git"
+  },
+  "homepage": "http://KoalaG.github.io/nbn-sq-map",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "webpack --mode production",
+    "serve": "webpack-dev-server --mode production",
     "start": "webpack-dev-server --mode development"
   },
   "dependencies": {
@@ -17,6 +24,7 @@
     "@types/leaflet": "^1.9.8",
     "@types/leaflet.markercluster": "^1.5.4",
     "css-loader": "^6.8.1",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
