--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "start": "webpack-dev-server --mode development"
   },
   "dependencies": {
+    "@types/esri-leaflet-geocoder": "^2.2.7",
     "@types/leaflet.locatecontrol": "^0.74.4",
+    "esri-leaflet": "^3.0.12",
+    "esri-leaflet-geocoder": "^3.1.4",
     "idb": "^8.0.0",
     "leaflet": "^1.9.4",
     "leaflet-google-places-autocomplete": "^0.0.9",
